[gd_scene load_steps=9 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Font/iosevka-fixed-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/AddQuestion/Add Question.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.772549, 0.847059, 0.427451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.772549, 0.847059, 0.427451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[node name="Add Question" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="TextEdit" parent="VBoxContainer"]
margin_right = 460.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 350 )
custom_fonts/font = SubResource( 1 )
text = "Question"
wrap_enabled = true

[node name="Option1" type="LineEdit" parent="VBoxContainer"]
margin_top = 375.0
margin_right = 460.0
margin_bottom = 436.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
placeholder_text = "Correct Option"

[node name="Option2" type="LineEdit" parent="VBoxContainer"]
margin_top = 461.0
margin_right = 460.0
margin_bottom = 522.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
placeholder_text = "Incorrect Option 1"

[node name="Option3" type="LineEdit" parent="VBoxContainer"]
margin_top = 547.0
margin_right = 460.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
placeholder_text = "Incorrect Option 2"

[node name="Option4" type="LineEdit" parent="VBoxContainer"]
margin_top = 633.0
margin_right = 460.0
margin_bottom = 694.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
placeholder_text = "Incorrect Option 3"

[node name="Next" type="Button" parent="VBoxContainer"]
margin_top = 719.0
margin_right = 460.0
margin_bottom = 758.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Add Next"

[node name="Done" type="Button" parent="VBoxContainer"]
margin_top = 783.0
margin_right = 460.0
margin_bottom = 822.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Done"

[connection signal="pressed" from="VBoxContainer/Next" to="." method="_add_to_data"]
[connection signal="pressed" from="VBoxContainer/Done" to="." method="_on_Done_pressed"]
